fixed overflow visit us

--- a/css/media.css
+++ b/css/media.css
@@ -62,7 +62,7 @@
   }
 
   .visit-container {
-    margin: 30px 50px;
+    margin: 30px 20px;
   }
 
   .exhibition-container div {
